# CirculosEnTriangulo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  triangulos.cpp
include/: CLI11.hpp  DifferentialEvolution.hpp  IntegerInterval.hpp  Point.hpp  View.hpp  transversal.hpp
